adds header and initial commit

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,10 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Open Sans', sans-serif !important;
+  background-image: url("data:image/svg+xml,***<here place encoded svg>***");
+  background-repeat: no-repeat;
+  
 }
 
 a {
